fixed versions, removed debugger statement, bottom aligned header name in scss, fixed Table state type

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -4,6 +4,8 @@ div.gridHeaderCell {
 
   div.name {
     flex: 1 100%;
+    flex-grow: 1;
+    align-self: flex-end;
   }
   
   div.sortIndicator {
